# silver-palm-tree

./: .gitattributes  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
assets/: Paddle.mtl  fox.profile2.12bpc.yuv444.avif
src/: lib.rs  store.rs
src/render/: mod.rs
src/render/shaders/: shader.vert
